--- a/portifolio/src/styles/_base.sass
+++ b/portifolio/src/styles/_base.sass
@@ -1,2 +1,59 @@
-h1
-    color: red
+@import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@200;400;500;700&display=swap')
+$font-stack: 'Bai Jamjuree', sans-serif
+
+*
+    margin: 0
+    padding: 0
+    box-sizing: border-box
+
+h1, body, p
+    font-family: $font-stack
+
+body
+    background-color: $bl-primary
+
+header
+    align-items: center
+    background-color: $bl-primary
+    display: flex
+    justify-content: space-around
+    height: 10vh
+    width: 100%
+    h2
+        // background: linear-gradient(to right, #B16CEA, #FF5E69, #FF8A56, #FFA84B)
+        // -webkit-background-clip: text
+        // -webkit-text-fill-color: transparent
+        color: $lt-primary
+        font-size: 2rem
+        font-weight: 500
+        text-decoration: none
+        &:hover
+            cursor: pointer
+    nav
+        display: flex
+        justify-content: left
+        width: 40%
+        a
+            color: $lt-primary
+            font-size: 1rem
+            font-weight: 400
+            text-decoration: none
+            margin: 0 1rem
+            &:hover
+                color: $lt-secondary
+    button
+        background-color: $lt-primary
+        border: none
+        border-radius: 15px
+        color: $bl-primary
+        font-size: 1rem
+        font-weight: 400
+        padding: 0.5rem 1rem
+        transition: all 0.3s ease-in-out
+        &:hover
+            background-color: $lt-secondary
+            color: $bl-secondary
+            transition: all 0.3s ease-in-out
+        &:active
+            background-color: $bl-primary
+            color: $lt-secondary
