--- a/portifolio/src/styles/_base.sass
+++ b/portifolio/src/styles/_base.sass
@@ -17,12 +17,12 @@ header
     background-color: $bl-primary
     display: flex
     justify-content: space-around
-    height: 10vh
+    height: 15vh
+    position: fixed
+    top: 0
+    left: 0
     width: 100%
     h2
-        // background: linear-gradient(to right, #B16CEA, #FF5E69, #FF8A56, #FFA84B)
-        // -webkit-background-clip: text
-        // -webkit-text-fill-color: transparent
         color: $lt-primary
         font-size: 2rem
         font-weight: 500
@@ -41,19 +41,3 @@ header
             margin: 0 1rem
             &:hover
                 color: $lt-secondary
-    button
-        background-color: $lt-primary
-        border: none
-        border-radius: 15px
-        color: $bl-primary
-        font-size: 1rem
-        font-weight: 400
-        padding: 0.5rem 1rem
-        transition: all 0.3s ease-in-out
-        &:hover
-            background-color: $lt-secondary
-            color: $bl-secondary
-            transition: all 0.3s ease-in-out
-        &:active
-            background-color: $bl-primary
-            color: $lt-secondary
