feat: change image to top

--- a/portifolio/src/styles/_base.sass
+++ b/portifolio/src/styles/_base.sass
@@ -6,7 +6,7 @@ $font-stack: 'Bai Jamjuree', sans-serif
     padding: 0
     box-sizing: border-box
 
-h1, body, p
+body
     font-family: $font-stack
 
 body
@@ -39,5 +39,10 @@ header
             font-weight: 400
             text-decoration: none
             margin: 0 1rem
+            transition: all 0.3s ease-in-out
+
             &:hover
                 color: $lt-secondary
+                font-size: 1.1rem
+                font-weight: 500
+                transition: all 0.3s ease-in-out
