--- a/portifolio/src/styles/_layout.sass
+++ b/portifolio/src/styles/_layout.sass
@@ -2,7 +2,7 @@
     .cover-title
         color: $lt-primary
         font-weight: 500
-        margin: 25vh 0 0 4rem
+        margin: 5vh 0 0 4rem
         width: 80%
         h1
             font-size: 4rem
@@ -20,10 +20,12 @@
 
     .cover-buttons
         display: flex
-        justify-content: space-between
         margin: 1rem 4rem
         width: 30%
+        .btn
+            margin: 0 2rem 0 0
 
     img
-        margin: 10vh 4rem
-        width: 70%
+        border-radius: 5px
+        margin: 20vh 0 0 4rem
+        width: 15rem
