feat: create project card

--- a/portifolio/src/styles/_base.sass
+++ b/portifolio/src/styles/_base.sass
@@ -8,9 +8,13 @@ $font-stack: 'Bai Jamjuree', sans-serif
 
 body
     font-family: $font-stack
-
-body
     background-color: $bl-primary
+
+h3
+    color: $lt-primary
+    font-size: 1.5rem
+    font-weight: 500
+    margin: 1rem 0
 
 header
     align-items: center
