--- a/portifolio/src/styles/_layout.sass
+++ b/portifolio/src/styles/_layout.sass
@@ -29,3 +29,43 @@
         border-radius: 5px
         margin: 20vh 0 0 4rem
         width: 15rem
+
+
+.container-card
+    align-items: center
+    background-color: $bl-secondary
+    border-radius: 5px
+    height: fit-content
+    margin: 2rem 0 2rem 4rem
+    padding: 0 0 1rem 0
+    width: 35vh
+
+    h3
+        color: $lt-primary
+        font-size: 1.3rem
+        font-weight: 500
+
+    h3, a
+        margin: 1rem
+
+    p
+        color: $lt-primary
+        font-size: 0.8rem
+        font-weight: 200
+        margin: 1rem 0
+        padding: 0 1rem
+    
+    a
+        color: $lt-primary
+        font-weight: 400
+        text-decoration: none
+        transition: all 0.3s ease-in-out
+        &:hover
+            color: $lt-secondary
+            font-size: 1.1rem
+            font-weight: 500
+            transition: all 0.3s ease-in-out
+
+    img
+        border-radius: 5px 5px 0 0
+        width: 100%
