--- a/portifolio/src/styles/_base.sass
+++ b/portifolio/src/styles/_base.sass
@@ -10,6 +10,11 @@ body
     font-family: $font-stack
     background-color: $bl-primary
 
+span
+    background: linear-gradient(to right, #B16CEA, #FF5E69, #FF8A56, #FFA84B)
+    -webkit-background-clip: text
+    -webkit-text-fill-color: transparent
+
 h3
     color: $lt-primary
     font-size: 1.5rem
