--- a/portifolio/src/styles/_base.sass
+++ b/portifolio/src/styles/_base.sass
@@ -11,9 +11,7 @@ body
     background-color: $bl-primary
 
 span
-    background: linear-gradient(to right, #B16CEA, #FF5E69, #FF8A56, #FFA84B)
-    -webkit-background-clip: text
-    -webkit-text-fill-color: transparent
+    @include gradient
 
 h3
     color: $lt-primary
