--- a/portifolio/src/styles/_layout.sass
+++ b/portifolio/src/styles/_layout.sass
@@ -34,6 +34,11 @@
     padding: 5vh 0 0 0
     width: 100%
 
+    .title-project-container
+        align-items: center
+        display: flex
+        justify-content: space-between
+
     h3
         font-size: 1.8rem
         font-weight: 600
@@ -42,7 +47,7 @@
     p
         color: $lt-primary
         font-size: 1rem
-        margin: 0 0 2rem 4rem
+        margin: 0 15rem 0 0 
         
         a
             color: $lt-primary
@@ -53,8 +58,6 @@
                 font-size: 1.1rem
                 color: $lt-secondary
                 transition: all 0.3s ease-in-out
-
-
 
 .project-content
     display: grid
