feat creating about page

--- a/portifolio/src/styles/_base.sass
+++ b/portifolio/src/styles/_base.sass
@@ -7,8 +7,9 @@ $font-stack: 'Bai Jamjuree', sans-serif
     box-sizing: border-box
 
 body
-    font-family: $font-stack
     background-color: $bl-primary
+    color: $lt-primary
+    font-family: $font-stack
 
 span
     @include gradient
