--- a/portifolio/src/styles/_layout.sass
+++ b/portifolio/src/styles/_layout.sass
@@ -103,3 +103,30 @@
     img
         border-radius: 10px 10px 0 0
         width: 100%
+
+.about-container
+    display: flex
+    flex-direction: column
+
+    .about-header
+        margin: 5vh 0 0 4rem
+
+        h2
+            font-size: 1.5rem
+            font-weight: 200
+            margin: 0 0 2rem 0
+
+
+    .about-content
+        display: flex
+        justify-content: space-between
+        margin: 5vh 0 0 4rem
+        width: 80%
+        
+        div
+            width: 40%
+
+            p
+                font-weight: 400
+                font-size: 1.1rem
+                margin: 0 0 4rem 0
