style: finalizing social media

--- a/portifolio/src/styles/_base.sass
+++ b/portifolio/src/styles/_base.sass
@@ -54,3 +54,9 @@ header
                 font-size: 1.1rem
                 font-weight: 500
                 transition: all 0.3s ease-in-out
+
+    .header-btn
+        align-items: center
+        display: flex
+        justify-content: space-between
+        width: 20rem
