--- a/portifolio/src/styles/_layout.sass
+++ b/portifolio/src/styles/_layout.sass
@@ -1,3 +1,20 @@
+.social-media
+    display: flex
+    justify-content: space-around
+    width: 8rem
+    a
+        width: 2rem
+        img
+            border-radius: 100%
+            transition: all 0.3s ease-in-out
+            width: 2rem
+            &:hover
+                cursor: pointer
+                transition: all 0.3s ease-in-out
+                transform: scale(1.2)
+    
+    
+    
 .cover-letter-container
     .cover-title
         color: $lt-primary
