--- a/portifolio/src/styles/_base.sass
+++ b/portifolio/src/styles/_base.sass
@@ -15,10 +15,9 @@ span
     @include gradient
 
 h3
-    color: $lt-primary
-    font-size: 1.5rem
-    font-weight: 500
-    margin: 1rem 0
+    font-size: 1.8rem
+    font-weight: 600
+    margin: 0 0 0 4rem
 
 header
     align-items: center
