--- a/portifolio/src/styles/_layout.sass
+++ b/portifolio/src/styles/_layout.sass
@@ -56,11 +56,6 @@
         display: flex
         justify-content: space-between
 
-    h3
-        font-size: 1.8rem
-        font-weight: 600
-        margin: 0 0 2rem 4rem
-
     p
         color: $lt-primary
         font-size: 1rem
@@ -126,12 +121,12 @@
     flex-direction: column
 
     .about-header
-        margin: 5vh 0 0 4rem
+        margin: 5rem 0 0 0
 
         h2
             font-size: 1.5rem
             font-weight: 200
-            margin: 0 0 2rem 0
+            margin: 0 0 2rem 4rem
 
 
     .about-content
