style: fixing space on left

--- a/portifolio/src/styles/_layout.sass
+++ b/portifolio/src/styles/_layout.sass
@@ -146,7 +146,7 @@
     background-color: $bl-secondary
     display: flex
     flex-direction: column
-    padding: 5vh
+    padding: 5vh 0
     width: 100%
     p
         margin: 5vh 4rem
