feat: add svgs to change for images

--- a/portifolio/src/styles/_layout.sass
+++ b/portifolio/src/styles/_layout.sass
@@ -53,13 +53,13 @@
 
     .title-project-container
         align-items: center
-        display: flex
-        justify-content: space-between
+        // display: flex
+        // justify-content: space-between
 
     p
         color: $lt-primary
         font-size: 1rem
-        margin: 0 15rem 0 0 
+        margin: 5vh 4rem 
         
         a
             color: $lt-primary
@@ -141,6 +141,11 @@
                 font-weight: 400
                 font-size: 1.1rem
                 margin: 0 0 4rem 0
+                transition: all 0.3s ease-in-out
+                &:hover
+                    color: $lt-secondary
+                    font-weight: 800
+                    transition: all 0.3s ease-in-out
 
 .skill-container
     background-color: $bl-secondary
