feat: change img to svg and remove header button

--- a/portifolio/src/styles/_layout.sass
+++ b/portifolio/src/styles/_layout.sass
@@ -4,7 +4,7 @@
     width: 8rem
     a
         width: 2rem
-        img
+        div
             border-radius: 100%
             transition: all 0.3s ease-in-out
             width: 2rem
@@ -53,8 +53,6 @@
 
     .title-project-container
         align-items: center
-        // display: flex
-        // justify-content: space-between
 
     p
         color: $lt-primary
@@ -141,10 +139,9 @@
                 font-weight: 400
                 font-size: 1.1rem
                 margin: 0 0 4rem 0
-                transition: all 0.3s ease-in-out
                 &:hover
                     color: $lt-secondary
-                    font-weight: 800
+                    font-weight: 500
                     transition: all 0.3s ease-in-out
 
 .skill-container
