chore: add dependencies and configure

--- a/portifolio/src/styles/_layout.sass
+++ b/portifolio/src/styles/_layout.sass
@@ -183,4 +183,7 @@
             &:hover
                 transition: all 0.3s ease-in-out
                 transform: scale(1.2)
+
+.contact-container
+    margin: 20vh 0 0 0
             
