style: for contact info

--- a/portifolio/src/styles/_base.sass
+++ b/portifolio/src/styles/_base.sass
@@ -6,6 +6,9 @@ $font-stack: 'Bai Jamjuree', sans-serif
     padding: 0
     box-sizing: border-box
 
+html
+    scroll-behavior: smooth
+
 body
     background-color: $bl-primary
     color: $lt-primary
@@ -13,6 +16,9 @@ body
 
 span
     @include gradient
+
+a
+    text-decoration: none
 
 h3
     font-size: 1.8rem
