--- a/portifolio/src/styles/_layout.sass
+++ b/portifolio/src/styles/_layout.sass
@@ -186,14 +186,26 @@
 
 .contact-container
     display: flex
-    margin: 20vh 0 0 0
     width: 100%
 
-    .contact-content
+
+.contact-form
+    form
+        border-radius: 2px
         display: flex
         flex-direction: column
-        margin: 5vh 0 0 4rem
-        width: 50%
+        margin: 15vh 4rem 0 0
+        width: 100%
+        label
+            display: flex
+            flex-direction: column
+            margin: 0 0 2rem 0
+
+.contact-content
+    display: flex
+    flex-direction: column
+    margin: 20vh 0 0 4rem
+    width: 50%
 
     .contact-description
         width: 70%
