--- a/portifolio/src/styles/_layout.sass
+++ b/portifolio/src/styles/_layout.sass
@@ -75,7 +75,6 @@
 .container-card
     align-items: center
     background-color: $bl-primary
-    // border-radius: 15px
     height: fit-content
     margin: 2rem 0 2rem 4rem
     padding: 0 0 1rem 0
@@ -114,8 +113,6 @@
     flex-direction: column
 
     .about-header
-        margin: 5rem 0 0 0
-
         h2
             font-size: 1.5rem
             font-weight: 200
@@ -229,3 +226,6 @@
             font-size: 1.1rem
             font-weight: 500
             margin: 0 1rem 0 1rem
+
+.container
+    padding: 10vh 0 0 0
