feat: footer component with credits

--- a/portifolio/src/styles/_layout.sass
+++ b/portifolio/src/styles/_layout.sass
@@ -201,7 +201,7 @@
 .contact-content
     display: flex
     flex-direction: column
-    margin: 20vh 0 0 4rem
+    margin: 20vh 4rem
     width: 50%
 
     .contact-description
@@ -227,5 +227,18 @@
             font-weight: 500
             margin: 0 1rem 0 1rem
 
-.container
-    padding: 10vh 0 0 0
+footer
+    display: flex
+    flex-direction: column
+    justify-content: space-between
+    margin: 0 0 0 4rem
+    height: 40vh
+    width: 90%
+    h2
+        color: $lt-primary
+        font-size: 1.5rem
+        font-weight: 400
+        margin: 2rem 0
+    p
+        font-size: 0.8rem
+        margin: 0 0 2rem 0
