--- a/portifolio/src/styles/main.sass
+++ b/portifolio/src/styles/main.sass
@@ -1,4 +1,6 @@
-@import '_colors.sass'
-@import '_components.sass'
+@import '_variables.sass'
+@import '_mixins.sass'
 @import '_base.sass'
+@import '_buttons.sass'
+@import '_containers.sass'
 @import '_layout.sass'
