--- a/portifolio/src/styles/_base.sass
+++ b/portifolio/src/styles/_base.sass
@@ -1,85 +1,84 @@
-@import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@200;400;500;700&display=swap')
-$font-stack: 'Bai Jamjuree', sans-serif
+@import 'variables'
+@import 'mixins'
 
 *
-    margin: 0
-    padding: 0
-    box-sizing: border-box
+  margin: 0
+  padding: 0
+  box-sizing: border-box
 
 html
-    scroll-behavior: smooth
+  scroll-behavior: smooth
 
 body
-    background-color: $bl-primary
-    color: $lt-primary
-    font-family: $font-stack
+  background-color: $bl-primary
+  color: $lt-primary
+  font-family: $font-stack
 
 span
-    @include gradient
+  @include gradient
 
 a
-    color: $lt-primary
-    font-size: 1rem
-    font-weight: 400
-    text-decoration: none
-    transition: all 0.3s ease-in-out
+  color: $lt-primary
+  font-size: 1rem
+  font-weight: 400
+  text-decoration: none
+  @include transition
 
     &:hover
-        color: $lt-secondary
-        font-size: 1.1rem
-        font-weight: 500
-        transition: all 0.3s ease-in-out
+      color: $lt-secondary
+      font-size: 1.1rem
+      font-weight: 500
+      @include transition
 
 h3
-    font-size: 1.8rem
-    font-weight: 600
-    margin: 0 0 0 4rem
+  font-size: 1.8rem
+  font-weight: 600
+  margin: 0 0 0 4rem
 
 input, textarea
-    background-color: $bl-secondary
-    border: none
-    color: $lt-primary
-    font-size: 1rem
-    font-family: $font-stack
-    font-weight: 400
-    margin: 1rem 0
-    padding: 0.5rem
-    &:focus
-        outline: none
+  background-color: $bl-secondary
+  border: none
+  color: $lt-primary
+  font-size: 1rem
+  font-family: $font-stack
+  font-weight: 400
+  margin: 1rem 0
+  padding: 0.5rem
+  &:focus
+    outline: none
     &::placeholder
-        font-size: 0.8rem
-        font-weight: 200
+      font-size: 0.8rem
+      font-weight: 200
 
 textarea
-    height: 10rem
+  height: 10rem
 
 header
-    align-items: center
-    background-color: $bl-primary
-    display: flex
-    justify-content: space-around
-    height: 10vh
-    position: fixed
-    top: 0
-    left: 0
-    width: 100%
-    h2
-        color: $lt-primary
-        font-size: 2rem
-        font-weight: 500
-        text-decoration: none
-        &:hover
-            cursor: pointer
+  align-items: center
+  background-color: $bl-primary
+  display: flex
+  justify-content: space-around
+  height: 10vh
+  position: fixed
+  top: 0
+  left: 0
+  width: 100%
+  h2
+    color: $lt-primary
+    font-size: 2rem
+    font-weight: 500
+    text-decoration: none
+    &:hover
+      cursor: pointer
     nav
-        display: flex
-        justify-content: left
-        width: 40%
-        a
-            margin: 0 1rem
-
+      display: flex
+      justify-content: left
+      width: 40%
+      a
+        margin: 0 1rem
 
     .header-btn
-        align-items: center
-        display: flex
-        justify-content: space-between
-        width: 20rem
+      align-items: center
+      display: flex
+      justify-content: space-between
+      width: 20rem
