--- a/portifolio/src/styles/_layout.sass
+++ b/portifolio/src/styles/_layout.sass
@@ -1,244 +1,246 @@
 .social-media
-    display: flex
-    justify-content: space-around
-    width: 8rem
-    a
-        width: 2rem
-        div
-            border-radius: 100%
-            transition: all 0.3s ease-in-out
-            width: 2rem
-            &:hover
-                cursor: pointer
-                transition: all 0.3s ease-in-out
-                transform: scale(1.2)
+  display: flex
+  justify-content: space-around
+  width: 8rem
+  a
+    width: 2rem
+    div
+      @include transition
+        border-radius: 100%
+        @include transition
+          width: 2rem
+          &:hover
+            cursor: pointer
+            @include transition
+              transform: scale(1.2)
 
 .cover-letter-container
-    .cover-title
-        color: $lt-primary
-        font-weight: 500
-        margin: 5vh 0 0 4rem
-        width: 80%
-        h1
-            font-size: 4rem
-            font-weight: 600
-            margin: 1rem 0
+  .cover-title
+    color: $lt-primary
+    font-weight: 500
+    margin: 5vh 0 0 4rem
+    width: 80%
+    h1
+      font-size: 4rem
+      font-weight: 600
+      margin: 1rem 0
 
-        p
-            font-size: 1rem
-            font-weight: 400
-            margin: 2rem 0
+      p
+        font-size: 1rem
+        font-weight: 400
+        margin: 2rem 0
 
     .cover-buttons
-        display: flex
-        margin: 1rem 4rem
-        width: 30%
-        .btn
-            margin: 0 2rem 0 0
+      display: flex
+      margin: 1rem 4rem
+      width: 30%
+      .btn
+        margin: 0 2rem 0 0
 
     img
-        border-radius: 5px
-        margin: 20vh 0 0 4rem
-        width: 15rem
+      border-radius: 5px
+      margin: 20vh 0 0 4rem
+      width: 15rem
 
 .project-container
-    background-color: $bl-secondary
-    display: flex
-    flex-direction: column
-    margin: 10vh 0 0 0
-    padding: 5vh 0 0 0
-    width: 100%
+  background-color: $bl-secondary
+  display: flex
+  flex-direction: column
+  margin: 10vh 0 0 0
+  padding: 5vh 0 0 0
+  width: 100%
 
-    .title-project-container
-        align-items: center
+  .title-project-container
+    align-items: center
 
     p
-        color: $lt-primary
-        font-size: 1rem
-        margin: 5vh 4rem
+      color: $lt-primary
+      font-size: 1rem
+      margin: 5vh 4rem
 
-        a
-            color: $lt-primary
-            font-weight: 600
-            transition: all 0.3s ease-in-out
-            &:hover
-                font-size: 1.1rem
-                color: $lt-secondary
-                transition: all 0.3s ease-in-out
+      a
+        color: $lt-primary
+        font-weight: 600
+        @include transition
+
+          &:hover
+            font-size: 1.1rem
+            color: $lt-secondary
+            @include transition
 
 .project-content
-    display: grid
-    grid-template-columns: repeat(3, 1fr)
-    grid-gap: 0rem
-    width: 80%
+  display: grid
+  grid-template-columns: repeat(3, 1fr)
+  grid-gap: 0rem
+  width: 80%
 
 .container-card
-    align-items: center
-    background-color: $bl-primary
-    height: fit-content
-    margin: 2rem 0 2rem 4rem
-    padding: 0 0 1rem 0
-    width: 45vh
+  align-items: center
+  background-color: $bl-primary
+  height: fit-content
+  margin: 2rem 0 2rem 4rem
+  padding: 0 0 1rem 0
+  width: 45vh
 
-    h3
-        color: $lt-primary
-        font-size: 1.3rem
-        font-weight: 500
+  h3
+    color: $lt-primary
+    font-size: 1.3rem
+    font-weight: 500
 
     h3, a
-        margin: 1rem
+      margin: 1rem
 
     p
-        color: $lt-primary
-        font-size: 0.8rem
-        font-weight: 200
-        margin: 1rem 0
-        padding: 0 1rem
+      color: $lt-primary
+      font-size: 0.8rem
+      font-weight: 200
+      margin: 1rem 0
+      padding: 0 1rem
 
     a
-        color: $lt-primary
-        font-weight: 40
-        transition: all 0.3s ease-in-out
+      color: $lt-primary
+      font-weight: 40
+      @include transition
+
         &:hover
-            color: $lt-secondary
-            font-size: 1.1rem
-            font-weight: 500
-            transition: all 0.3s ease-in-out
+          color: $lt-secondary
+          font-size: 1.1rem
+          font-weight: 500
+          @include transition
 
     img
-        width: 100%
+      width: 100%
 
 .about-container
-    display: flex
-    flex-direction: column
+  display: flex
+  flex-direction: column
 
-    .about-header
-        h2
-            font-size: 1.5rem
-            font-weight: 200
-            margin: 0 0 2rem 4rem
+  .about-header
+    h2
+      font-size: 1.5rem
+      font-weight: 200
+      margin: 0 0 2rem 4rem
 
     .about-content
-        display: flex
-        justify-content: space-between
-        margin: 5vh 0 0 4rem
-        width: 80%
+      display: flex
+      justify-content: space-between
+      margin: 5vh 0 0 4rem
+      width: 80%
 
-        div
-            width: 40%
+      div
+        width: 40%
 
-            p
-                font-weight: 400
-                font-size: 1.1rem
-                margin: 0 0 4rem 0
-                &:hover
-                    color: $lt-secondary
-                    font-weight: 500
-                    transition: all 0.3s ease-in-out
+        p
+          font-weight: 400
+          font-size: 1.1rem
+          margin: 0 0 4rem 0
+          &:hover
+            color: $lt-secondary
+            font-weight: 500
+            @include transition
 
 .skill-container
-    background-color: $bl-secondary
-    display: flex
-    flex-direction: column
-    padding: 5vh 0
-    width: 100%
+  background-color: $bl-secondary
+  display: flex
+  flex-direction: column
+  padding: 5vh 0
+  width: 100%
 
-    p
-        margin: 5vh 4rem
-        
-        a
-            color: $lt-primary
-            font-weight: 600
-            transition: all 0.3s ease-in-out
-            &:hover
-                color: $lt-secondary
-                font-size: 1.1rem
-                transition: all 0.3s ease-in-out
+  p
+    margin: 5vh 4rem
+
+    a
+      color: $lt-primary
+      font-weight: 600
+      @include transition
+
+        &:hover
+          color: $lt-secondary
+          font-size: 1.1rem
+          @include transition
 
     .skill-content
-        display: grid
-        grid-template-columns: repeat(6, 1fr)
-        grid-gap: 2rem
-        margin: 5vh 0 0 4rem
-        width: 80%
+      display: grid
+      grid-template-columns: repeat(6, 1fr)
+      grid-gap: 2rem
+      margin: 5vh 0 0 4rem
+      width: 80%
 
-        .skill-card
-            align-items: center
-            background-color: $bl-primary
-            display: flex
-            flex-direction: column
-            justify-content: space-between
-            padding: 2rem 0 2rem 0
-            transition: all 0.3s ease-in-out
-
-            img
-                width: 3rem
+      .skill-card
+        align-items: center
+        background-color: $bl-primary
+        display: flex
+        flex-direction: column
+        justify-content: space-between
+        padding: 2rem 0 2rem 0
+        @include transition
+          img
+            width: 3rem
 
             p
-                margin: 1rem 0 0 0
-                font-weight: 500
+              margin: 1rem 0 0 0
+              font-weight: 500
             &:hover
-                transition: all 0.3s ease-in-out
+              @include transition
                 transform: scale(1.2)
 
 .contact-container
-    display: flex
-    width: 100%
-
+  display: flex
+  width: 100%
 
 .contact-form
-    form
-        border-radius: 2px
-        display: flex
-        flex-direction: column
-        margin: 15vh 4rem 0 0
-        width: 100%
-        label
-            display: flex
-            flex-direction: column
-            margin: 0 0 2rem 0
+  form
+    border-radius: 2px
+    display: flex
+    flex-direction: column
+    margin: 15vh 4rem 0 0
+    width: 100%
+    label
+      display: flex
+      flex-direction: column
+      margin: 0 0 2rem 0
 
 .contact-content
-    display: flex
-    flex-direction: column
-    margin: 20vh 4rem
-    width: 50%
+  display: flex
+  flex-direction: column
+  margin: 20vh 4rem
+  width: 50%
 
-    .contact-description
-        width: 70%
+  .contact-description
+    width: 70%
 
-        h2
-            font-size: 2rem
-            margin: 0 0 2rem 0
+    h2
+      font-size: 2rem
+      margin: 0 0 2rem 0
 
-        p
-            font-size: 1.1rem
-            font-weight: 300
-            margin: 4vh 0
+      p
+        font-size: 1.1rem
+        font-weight: 300
+        margin: 4vh 0
 
     .contact-item
-        align-items: center
-        display: flex
-        margin: 1rem 0 0 0
+      align-items: center
+      display: flex
+      margin: 1rem 0 0 0
 
-        p
-            color: $lt-primary
-            font-size: 1.1rem
-            font-weight: 500
-            margin: 0 1rem 0 1rem
+      p
+        color: $lt-primary
+        font-size: 1.1rem
+        font-weight: 500
+        margin: 0 1rem 0 1rem
 
 footer
-    display: flex
-    flex-direction: column
-    justify-content: space-between
-    margin: 0 0 0 4rem
-    height: 40vh
-    width: 90%
-    h2
-        color: $lt-primary
-        font-size: 1.5rem
-        font-weight: 400
-        margin: 2rem 0
+  display: flex
+  flex-direction: column
+  justify-content: space-between
+  margin: 0 0 0 4rem
+  height: 40vh
+  width: 90%
+  h2
+    color: $lt-primary
+    font-size: 1.5rem
+    font-weight: 400
+    margin: 2rem 0
     p
-        font-size: 0.8rem
-        margin: 0 0 2rem 0
+      font-size: 0.8rem
+      margin: 0 0 2rem 0
