--- a/portifolio/src/styles/_layout.sass
+++ b/portifolio/src/styles/_layout.sass
@@ -45,7 +45,6 @@
   display: flex
   flex-direction: column
   margin: 10vh 0 0 0
-  padding: 5vh 0 0 0
   width: 100%
 
   .title-project-container
@@ -139,7 +138,6 @@
   background-color: $bl-secondary
   display: flex
   flex-direction: column
-  padding: 5vh 0
   width: 100%
 
   p
@@ -236,5 +234,7 @@ footer
     font-weight: 400
     margin: 2rem 0
   p
-    font-size: 0.8rem
-    margin: 0 0 2rem 0
+    font-size: 0.7rem
+    a
+      font-size: 0.7rem
+      font-weight: 600
