style: for button language toggle

--- a/portifolio/src/styles/_base.sass
+++ b/portifolio/src/styles/_base.sass
@@ -81,3 +81,8 @@ header
       display: flex
       justify-content: space-between
       width: 20rem
+  button
+    height: 2rem
+    max-width: fit-content
+    p
+      font-size: 0.7rem
