--- a/portifolio/src/styles/_layout.sass
+++ b/portifolio/src/styles/_layout.sass
@@ -23,6 +23,8 @@
       font-size: 4rem
       font-weight: 600
       margin: 1rem 0
+      @media (max-width: 600px)
+        font-size: 2rem
     p
       font-size: 1rem
       font-weight: 400
@@ -31,7 +33,7 @@
   .cover-buttons
     display: flex
     margin: 1rem 4rem
-    width: 30%
+    width: 80%
     .btn
       margin: 0 2rem 0 0
 
@@ -69,6 +71,12 @@
   grid-template-columns: repeat(3, 1fr)
   grid-gap: 0rem
   width: 80%
+  @media (max-width: 900px)
+    grid-template-columns: repeat(2, 1fr)
+    justify-items: center
+    width: 100%
+  @media (max-width: 730px)
+    grid-template-columns: repeat(1, 1fr)
 
 .container-card
   align-items: center
@@ -77,6 +85,9 @@
   margin: 2rem 0 2rem 4rem
   padding: 0 0 1rem 0
   width: 45vh
+  @media (max-width: 700px)
+    margin: 2rem 0
+    width: 60%
 
   h3
     color: $lt-primary
@@ -121,9 +132,18 @@
     justify-content: space-between
     margin: 5vh 0 0 4rem
     width: 80%
+    @media (max-width: 600px)
+      align-items: center
+      flex-direction: column
+      margin: 0
+      width: 100vw
 
     div
       width: 40%
+      @media (max-width: 600px)
+        padding: 2rem
+        margin: 0
+        width: 80%
 
       p
         font-weight: 400
@@ -158,6 +178,13 @@
     grid-gap: 2rem
     margin: 5vh 0 0 4rem
     width: 80%
+    @media (max-width: 900px)
+      grid-template-columns: repeat(4, 1fr)
+    @media (max-width: 600px)
+      grid-template-columns: repeat(3, 1fr)
+      margin: 5vh auto
+    @media (max-width: 400px)
+      grid-template-columns: repeat(2, 1fr)
 
     .skill-card
       @include transition
@@ -179,8 +206,14 @@
 .contact-container
   display: flex
   width: 100%
+  @media (max-width: 600px)
+    margin: 10vh 0 0 0
+    flex-direction: column
 
 .contact-form
+  @media (max-width: 600px)
+    padding: 0 2rem
+    width: 100%
   form
     border-radius: 2px
     display: flex
@@ -197,9 +230,15 @@
   flex-direction: column
   margin: 20vh 4rem
   width: 50%
+  @media (max-width: 600px)
+    margin: 0
+    width: 100%
 
   .contact-description
     width: 70%
+    @media (max-width: 600px)
+      padding: 2rem
+      width: 100%
 
     h2
       font-size: 2rem
@@ -226,15 +265,24 @@ footer
   flex-direction: column
   justify-content: space-between
   margin: 0 0 0 4rem
-  height: 40vh
+  height: 30vh
   width: 90%
+  @media (max-width: 600px)
+    height: 25vh
+    margin: 0 0 2rem 0
+    width: 100%
+
   h2
     color: $lt-primary
     font-size: 1.5rem
     font-weight: 400
     margin: 2rem 0
+    @media (max-width: 600px)
+      margin: 1rem
   p
     font-size: 0.7rem
+    @media (max-width: 600px)
+      margin: 1rem
     a
       font-size: 0.7rem
       font-weight: 600
