--- a/portifolio/src/styles/_base.sass
+++ b/portifolio/src/styles/_base.sass
@@ -62,19 +62,31 @@ header
   top: 0
   left: 0
   width: 100%
+  @media (max-width: 768px)
+    display: inline-block
+    height: fit-content
+    position: relative
   h2
     color: $lt-primary
     font-size: 2rem
     font-weight: 500
     text-decoration: none
+    @media (max-width: 768px)
+      display: none
     &:hover
       cursor: pointer
   nav
     display: flex
     justify-content: left
     width: 40%
+    @media (max-width: 768px)
+      justify-content: center
+      padding: 1rem
+      width: 100%
     a
       margin: 0 1rem
+      @media (max-width: 768px)
+        margin: 0 0.5rem
 
     .header-btn
       align-items: center
@@ -84,9 +96,7 @@ header
   button
     height: 2rem
     max-width: fit-content
+    @media (max-width: 768px)
+      margin: 1rem 0 0 4rem
     p
       font-size: 0.7rem
-
-@media (max-width: 768px)
-  header
-    display: none
