--- a/portifolio/src/styles/_layout.sass
+++ b/portifolio/src/styles/_layout.sass
@@ -2,6 +2,8 @@
   display: flex
   justify-content: space-around
   width: 8rem
+  @media (max-width: 768px)
+    margin: 1rem 0 0 4rem
   a
     width: 2rem
     div
@@ -41,6 +43,8 @@
     border-radius: 5px
     margin: 20vh 0 0 4rem
     width: 15rem
+    @media (max-width: 768px)
+    margin: 4rem 0 0 4rem
 
 .project-container
   background-color: $bl-secondary
@@ -207,7 +211,7 @@
   display: flex
   width: 100%
   @media (max-width: 600px)
-    margin: 10vh 0 0 0
+    margin: 1rem 0 0 0
     flex-direction: column
 
 .contact-form
