--- a/portifolio/src/styles/_layout.sass
+++ b/portifolio/src/styles/_layout.sass
@@ -270,9 +270,9 @@ footer
   justify-content: space-between
   margin: 0 0 0 4rem
   height: 30vh
+  padding: 5vh 0
   width: 90%
   @media (max-width: 600px)
-    height: 25vh
     margin: 0 0 2rem 0
     width: 100%
 
