style: responsivity of contact-item

--- a/src/styles/_layout.sass
+++ b/src/styles/_layout.sass
@@ -257,6 +257,8 @@
     align-items: center
     display: flex
     margin: 1rem 0 0 0
+    @media (max-width: 600px)
+      padding: 0 2rem
 
     p
       color: $lt-primary
