style: change font weight of black btn

--- a/frontend/src/styles/_buttons.sass
+++ b/frontend/src/styles/_buttons.sass
@@ -23,6 +23,7 @@
 
 .btn-black
   @include btn-gradient-bw($bl-primary, $lt-secondary)
+  font-weight: 500
   &:hover
     background-position: -100% 0
   &:active
